--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,7 @@
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
     --radius: 0.5rem;
+    --link: 221 83% 43%;
   }
 
   .dark {
@@ -46,6 +47,7 @@
     --border: 216 34% 17%;
     --input: 216 34% 17%;
     --ring: 216 83% 85%;
+    --link: 217 91% 60%;
   }
 }
 
